--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -41,6 +41,10 @@ a {
   font-size: 1.25rem;
 }
 
+.banner, .information {
+  margin: auto 0;
+}
+
 /* Header */
 
 header {
@@ -52,7 +56,7 @@ header {
   width: 100%;
   background-color: white;
   z-index: 10;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 }
 
 header img {
@@ -96,6 +100,7 @@ nav {
 
 .banner {
 display: block;
+background-color: lightgray;
 }
 
 .banner img {
@@ -104,6 +109,7 @@ display: block;
   width: 60%;
   margin: 2rem 2.5rem 2rem 1.5rem;
   flex-shrink: 0;
+  padding-top: 4rem;
 }
 
 .side-text {
@@ -126,8 +132,8 @@ display: block;
 
 .start {
   width: 75%;
-  background-color: #ADBED3;
-  color: #01161E;
+  background-color: dimgray;
+  color: white;
   font-size: 1.2rem;
   padding: 1rem 0;
   text-align: center;
@@ -140,6 +146,12 @@ display: block;
   color: #01161E;
 }
 
-.information .content-box:last-child, .thesis .content-box:first-child {
-  background-color: #EEF9ED;
+/* Second Section "Keep Practicing" */
+
+/* Big Containers */
+
+.multi-container {
+  width: 100%;
+  display: flex;
+  flex-wrap: nowrap;
 }
