--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -59,7 +59,7 @@ header {
   align-items: center;
   height: 64px;
   width: 100%;
-  background-color: white;
+  background-color: #FFFFFF;
   z-index: 10;
   /*border: 1px solid red;*/
 }
@@ -76,7 +76,7 @@ header img {
 }
 
 .header-logo h3 {
-  color: lightgray;
+  color: #D3D3D3;
 }
 
 .header-logo span {
@@ -105,7 +105,7 @@ nav {
 
 .banner {
 display: block;
-background-color: lightgray;
+background-color: #D3D3D3;
 }
 
 .banner img {
@@ -137,7 +137,7 @@ background-color: lightgray;
 
 .start {
   width: 75%;
-  background-color: dimgray;
+  background-color: #696969;
   color: white;
   font-size: 1.2rem;
   padding: 1rem 0;
@@ -215,5 +215,49 @@ background-color: lightgray;
 }
 
 .information .content-box:last-child, .content-box:first-child {
-  background-color: lightgray;
+  background-color: #D3D3D3;
+}
+
+/* Third Section "Start Learning" */
+
+.learn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
+  background-color: #D3D3D3;
+}
+
+.learn-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 90%;
+  margin-bottom: 2rem;
+}
+
+.learn-box {
+  background-color: #FFFFFF;
+  width: 30%;
+  height: auto;
+  margin: 0 0.5rem 1rem 0.5rem;
+}
+
+.learn h2 {
+  text-align: center;
+}
+
+.learn-box img {
+  width: 100%;
+}
+
+.learn-text {
+  margin: 1.5rem auto;
+  padding: 1rem 0 0 1rem;
+}
+
+/* Footer Section "Thesis Exhbit" */
+
+footer {
+  ..
 }
