--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -273,3 +273,30 @@ background-color: #D3D3D3;
 .thesis h2 {
   text-align: center;
 }
+
+/* Footer */
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  background-color: #D3D3D3;
+  border-top: 1px solid #01161E;
+  top: 4rem;
+  width: 100%
+}
+
+footer nav {
+  align-self: auto;
+  padding-top: 1rem;
+}
+
+footer h5 {
+  font-family: "Roboto", sans-serif;
+  display: inline-block;
+  padding: 1rem 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+footer span {
+  padding-left: 1rem;
+}
